--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,15 @@
                     <groupId>io.springfox</groupId>
                     <artifactId>springfox-swagger-ui</artifactId>
                     <version>2.6.1</version>
-                </dependency>                
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-actuator</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.data</groupId>
+                    <artifactId>spring-data-rest-hal-browser</artifactId>
+                </dependency>
                 <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
