--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,11 @@
                     <groupId>org.springframework.data</groupId>
                     <artifactId>spring-data-rest-hal-browser</artifactId>
                 </dependency>
+<!--            Remove for H2 JPA demonstration    
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-security</artifactId>
-                </dependency>
+                </dependency>-->
                 <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
